--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
  </head>
 
   <body>
-    <h1>Costa Rica: Población total para el año 2000 según cantónes </h1>
+    <h1>Costa Rica: Población total para el año 2000 según cantónes y capas Provider y wms</h1>
     <div id='map'></div>
 
     <script src="js/Cantones2014wgs84.js" type="text/javascript"></script>
@@ -41,18 +41,18 @@
       });    
       osm.addTo(mapa);
 	  
-	   // Capa de tipo L.tileLayer definida con el complemento Leaflet-providers
+     // En esta parte se coloca la capa de tipo L.tileLayer definida con el complemento Leaflet-providers
      
      var topo = L.tileLayer.provider('OpenTopoMap');
      topo.addTo(mapa);    
 
-	 var Stamen = L.tileLayer.provider('Stamen.Watercolor');
+     var Stamen = L.tileLayer.provider('Stamen.Watercolor');
      Stamen.addTo(mapa);  
 	 
      var Esri = L.tileLayer.provider('Esri.OceanBasemap');
      Esri.addTo(mapa); 
 	 
-    // Capa de tipo L.tileLayer definida con el complemento WMS
+    // En esta parte se coloca la capa de tipo L.tileLayer definida con el complemento WMS
 	
 
     var hidrografia = L.tileLayer.wms('http://geos.snitcr.go.cr/be/IGN_5/wms?', {
@@ -125,7 +125,7 @@
     var baseLayers = {
 	"OpenStreetMap": osm,
 	"MapBox" : mbox,
-    "OpenTopoMap" : topo,
+        "OpenTopoMap" : topo,
 	"Stamen_Watercolor" : Stamen,
 	"EsriOceanBasemap" : Esri,
 	"hidrografia_wms" : hidrografia,
