--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Mapa de coropletas con Leaflet y GeoJSON Poblacion total</title>
+    <title>Mapa de coropletas con Leaflet y GeoJSON Poblacion total y capas provider y wms</title>
 
     <meta charset="UTF-8" />
 	
